--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,11 @@
 ---
+      author: Oliver Long
 title: "Page Not Found"
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
+taxonomies:
+  tags: ["Oliver Long"]
 ---
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
