--- a/_talks/GR23.md
+++ b/_talks/GR23.md
@@ -6,4 +6,7 @@ permalink: /talks/GR23
 venue: "23rd International Conference on General Relativity and Gravitation"
 date: 2022-07-05
 location: "Chinese Academy of Science via Zoom."
+excerpt: ""
 ---
+
+<embed src="/assets/GR23.pdf" type="application/pdf"> 
