--- a/_talks/GR23.md
+++ b/_talks/GR23.md
@@ -2,7 +2,7 @@
 title: "Self-force in hyperbolic black hole encounters"
 collection: talks
 type: "Talk"
-permalink: /talks/GR23
+permalink: /talks/gr23
 venue: "23rd International Conference on General Relativity and Gravitation"
 date: 2022-07-05
 location: "Chinese Academy of Science via Zoom."
