Added link to GR23 talk in talks and CV. Removed GR23 slides from assets

--- a/_talks/GR23.md
+++ b/_talks/GR23.md
@@ -6,7 +6,5 @@ permalink: /talks/gr23
 venue: "23rd International Conference on General Relativity and Gravitation"
 date: 2022-07-05
 location: "Chinese Academy of Science via Zoom."
-excerpt: ""
+link: 'https://www.koushare.com/video/videodetail/30159'
 ---
-
-<embed src="/assets/GR23.pdf" type="application/pdf"> 
