More little changes

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -155,7 +155,7 @@
 @misc{LISAWav,
   abbr		   = {Invited Talk},
   title        = {Modelling of unbound binary black hole encounters},
-  additional_info={Fundamental Physics Meets Waveforms With LISA},
+  additional_info={[Fundamental Physics Meets Waveforms With LISA](https://workshops.aei.mpg.de/fpmeetswavelisa/)},
   year         = {2024},
   month        = {7},
   note         = {Max Planck Institute for Gravitational Physics, Potsdam},
@@ -165,7 +165,7 @@
 @misc{GSFAmpEdinburgh,
   abbr		   = {Invited Talk},
   title        = {Comparing numeric and analytic methods for black hole scattering in unequal mass systems},
-  additional_info={Gravitational Self-Force and Scattering Amplitudes Workshop},
+  additional_info={[Gravitational Self-Force and Scattering Amplitudes Workshop](https://indico.ph.ed.ac.uk/event/278/)},
   year         = {2024},
   month        = {3},
   note         = {The Higgs Centre for Theoretical Physics, Edinburgh},
@@ -175,7 +175,7 @@
 @misc{GSFAmpBrazil,
   abbr		   = {Invited Talk},
   title        = {Self-force meets post-Minkowskian in the scattering regime},
-  additional_info={Gravitational Waves meet Amplitudes in the Southern Hemisphere},
+  additional_info={[Gravitational Waves meet Amplitudes in the Southern Hemisphere](https://www.ictp-saifr.org/gwa2023/)},
   year         = {2023},
   month        = {8},
   note         = {International Center for Theoretical Physics South American Institute for Fundamental Research, Sao Paulo},
@@ -185,7 +185,7 @@
 @misc{Hyperboloidal,
   abbr		   = {Invited Talk},
   title        = {Hyperbolic self-force calculations within a hyperboloidal framework},
-  additional_info={Infinity on a Gridshell},
+  additional_info={[Infinity on a Gridshell](https://hyperboloid.al/event/copenhagen-23/)},
   year         = {2023},
   month        = {7},
   note         = {Niels Bohr Institute, Copenhagen},
@@ -195,7 +195,7 @@
 @misc{QCDmeetsGravity,
   abbr		   = {Invited Talk},
   title        = {Extraction of high-order post-Minkowskian results from scattering self-force calculations},
-  additional_info={QCD meets Gravity 2022},
+  additional_info={[QCD meets Gravity 2022](https://indico.phys.ethz.ch/event/22/)},
   year         = {2022},
   month        = {12},
   note         = {University of Zurich},
@@ -205,7 +205,7 @@
 @misc{SXScon,
   abbr		   = {Contributed Talk},
   title        = {Hyperbolic Binary Black Hole encounters with SpEC},
-  additional_info={Simulating Extreme Spacetimes with SpEC and SpECTRE},
+  additional_info={[Simulating Extreme Spacetimes with SpEC and SpECTRE](https://icerm.brown.edu/topical_workshops/tw-24-ses/)},
   year         = {2024},
   month        = {8},
   note         = {The Institute for Computational and Experimental Research in Mathematics, Providence},
@@ -215,7 +215,7 @@
 @misc{Capra27,
   abbr		   = {Contributed Talk},
   title        = {Double the hype: Hyperboloidal framework for self-force in hyperbolic black hole encounters},
-  additional_info={27th Capra Meeting on Radiation Reaction in General Relativity},
+  additional_info={[27th Capra Meeting on Radiation Reaction in General Relativity](https://www.caprameeting.org/capra-27)},
   year         = {2024},
   month        = {6},
   note         = {National University of Singapore},
@@ -225,7 +225,7 @@
 @misc{Capra26,
   abbr		   = {Contributed Talk},
   title        = {Comparison of post-Minkowskian and self-force expansions: Scattering in a scalar charge toy model},
-  additional_info={26th Capra Meeting on Radiation Reaction in General Relativity},
+  additional_info={[26th Capra Meeting on Radiation Reaction in General Relativity](https://www.caprameeting.org/capra-meetings/capra-26)},
   year         = {2023},
   month        = {7},
   note         = {Niels Bohr Institute, Copenhagen},
@@ -235,7 +235,7 @@
 @misc{LISASymp14,
   abbr		   = {Contributed Talk},
   title        = {Self-force in hyperbolic black hole encounters},
-  additional_info={LISA Symposium XIV},
+  additional_info={[LISA Symposium XIV](https://virtual.oxfordabstracts.com/#/event/3009/information)},
   year         = {2022},
   month        = {7},
   note         = {Online},
@@ -255,7 +255,7 @@
 @misc{Capra25,
   abbr		   = {Contributed Talk},
   title        = {Self-force in hyperbolic black hole encounters},
-  additional_info={25th Capra Meeting on Radiation Reaction in General Relativity},
+  additional_info={[25th Capra Meeting on Radiation Reaction in General Relativity](https://www.caprameeting.org/capra-meetings/capra-25)},
   year         = {2022},
   month        = {6},
   note         = {University College Dublin},
@@ -265,7 +265,7 @@
 @misc{BritGrav22,
   abbr		   = {Contributed Talk},
   title        = {Self-force in hyperbolic binary-black-hole encounters},
-  additional_info={BritGrav22},
+  additional_info={[BritGrav22](https://www.gla.ac.uk/events/conferences/britgrav22/)},
   year         = {2022},
   month        = {4},
   note         = {University of Glasgow (Online)},
@@ -275,7 +275,7 @@
 @misc{Capra24,
   abbr		   = {Contributed Talk},
   title        = {Time-domain metric reconstruction for hyperbolic scattering},
-  additional_info={24th Capra Meeting on Radiation Reaction in General Relativity},
+  additional_info={[24th Capra Meeting on Radiation Reaction in General Relativity](https://events.perimeterinstitute.ca/event/7/)},
   year         = {2021},
   month        = {6},
   note         = {Perimeter Institute (Online)},
@@ -285,7 +285,7 @@
 @misc{BritGrav21,
   abbr		   = {Contributed Talk},
   title        = {Towards a self-force calculation of the scatter angle in hyperbolic encounters},
-  additional_info={BritGrav21},
+  additional_info={[BritGrav21](https://sites.google.com/view/britgrav21)},
   year         = {2021},
   month        = {4},
   note         = {University College Dublin (Online)},
@@ -295,7 +295,7 @@
 @misc{LISASymp13,
   abbr		   = {Contributed Talk},
   title        = {Towards a self-force calculation of the scatter angle in hyperbolic encounters},
-  additional_info={LISA Symposium XIII},
+  additional_info={[LISA Symposium XIII](https://lisasymposium13.lisamission.org/)},
   year         = {2021},
   month        = {10},
   note         = {University College Dublin (Online)},
@@ -305,7 +305,7 @@
 @misc{Capra23,
   abbr		   = {Contributed Talk},
   title        = {Towards a self-force calculation of the scatter angle in hyperbolic encounters},
-  additional_info={24th Capra Meeting on Radiation Reaction in General Relativity},
+  additional_info={[23rd Capra Meeting on Radiation Reaction in General Relativity](https://zippy.ph.utexas.edu/relativity/capra23/)},
   year         = {2020},
   month        = {6},
   note         = {University of Texas at Austin (Online)},
@@ -315,7 +315,7 @@
 @misc{GWVerse,
   abbr		   = {Poster},
   title        = {Time-domain metric reconstruction using the Hertz potential},
-  additional_info={3rd meeting of the GWVerse COST action},
+  additional_info={[3rd meeting of the GWVerse COST action](https://indico.sissa.it/event/37/)},
   year         = {2020},
   month        = {1},
   note         = {Institute for Fundamental Physics of the Universe, Trieste},
