--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -158,7 +158,7 @@
   additional_info={[Fundamental Physics Meets Waveforms With LISA](https://workshops.aei.mpg.de/fpmeetswavelisa/)},
   year         = {2024},
   month        = {7},
-  note         = {Max Planck Institute for Gravitational Physics, Potsdam},
+  note         = {Max Planck Institute for Gravitational Physics, Potsdam, DE},
   preview      = {SFNR.gif}
 }
 
@@ -168,7 +168,7 @@
   additional_info={[Gravitational Self-Force and Scattering Amplitudes Workshop](https://indico.ph.ed.ac.uk/event/278/)},
   year         = {2024},
   month        = {3},
-  note         = {The Higgs Centre for Theoretical Physics, Edinburgh},
+  note         = {The Higgs Centre for Theoretical Physics, Edinburgh, UK},
   preview      = {SF.gif}
 }
 
@@ -178,7 +178,7 @@
   additional_info={[Gravitational Waves meet Amplitudes in the Southern Hemisphere](https://www.ictp-saifr.org/gwa2023/)},
   year         = {2023},
   month        = {8},
-  note         = {International Center for Theoretical Physics South American Institute for Fundamental Research, Sao Paulo},
+  note         = {International Center for Theoretical Physics South American Institute for Fundamental Research, São Paulo, BR},
   preview      = {SFPMAmp.gif}
 }
 
@@ -188,7 +188,7 @@
   additional_info={[Infinity on a Gridshell](https://hyperboloid.al/event/copenhagen-23/)},
   year         = {2023},
   month        = {7},
-  note         = {Niels Bohr Institute, Copenhagen},
+  note         = {Niels Bohr Institute, Copenhagen, DK},
   preview      = {SF.gif}
 }
 
@@ -198,7 +198,7 @@
   additional_info={[QCD meets Gravity 2022](https://indico.phys.ethz.ch/event/22/)},
   year         = {2022},
   month        = {12},
-  note         = {University of Zurich},
+  note         = {University of Zurich, CH},
   preview      = {SFPMAmp.gif},
 }
 
@@ -208,7 +208,7 @@
   additional_info={[Simulating Extreme Spacetimes with SpEC and SpECTRE](https://icerm.brown.edu/topical_workshops/tw-24-ses/)},
   year         = {2024},
   month        = {8},
-  note         = {The Institute for Computational and Experimental Research in Mathematics, Providence},
+  note         = {The Institute for Computational and Experimental Research in Mathematics, Providence, US},
   preview      = {NR.gif}
 }
 
@@ -218,7 +218,7 @@
   additional_info={[27th Capra Meeting on Radiation Reaction in General Relativity](https://www.caprameeting.org/capra-27)},
   year         = {2024},
   month        = {6},
-  note         = {National University of Singapore},
+  note         = {National University of Singapore, SG},
   preview      = {SF.gif}
 }
 
@@ -228,7 +228,7 @@
   additional_info={[26th Capra Meeting on Radiation Reaction in General Relativity](https://www.caprameeting.org/capra-meetings/capra-26)},
   year         = {2023},
   month        = {7},
-  note         = {Niels Bohr Institute, Copenhagen},
+  note         = {Niels Bohr Institute, Copenhagen, DK},
   preview      = {SFPMAmp.gif}
 }
 
@@ -248,7 +248,7 @@
   additional_info={23rd International Conference on General Relativity and Gravitation},
   year         = {2022},
   month        = {7},
-  note         = {Chinese Academy of Science (Online)},
+  note         = {Chinese Academy of Science, CN (Online)},
   preview      = {SF.gif}
 }
 
@@ -258,7 +258,7 @@
   additional_info={[25th Capra Meeting on Radiation Reaction in General Relativity](https://www.caprameeting.org/capra-meetings/capra-25)},
   year         = {2022},
   month        = {6},
-  note         = {University College Dublin},
+  note         = {University College Dublin, IE},
   preview      = {SF.gif}
 }
 
@@ -268,7 +268,7 @@
   additional_info={[BritGrav22](https://www.gla.ac.uk/events/conferences/britgrav22/)},
   year         = {2022},
   month        = {4},
-  note         = {University of Glasgow (Online)},
+  note         = {University of Glasgow, UK (Online)},
   preview      = {SF.gif}
 }
 
@@ -278,7 +278,7 @@
   additional_info={[24th Capra Meeting on Radiation Reaction in General Relativity](https://events.perimeterinstitute.ca/event/7/)},
   year         = {2021},
   month        = {6},
-  note         = {Perimeter Institute (Online)},
+  note         = {Perimeter Institute, CA (Online)},
   preview      = {SF.gif}
 }
 
@@ -288,7 +288,7 @@
   additional_info={[BritGrav21](https://sites.google.com/view/britgrav21)},
   year         = {2021},
   month        = {4},
-  note         = {University College Dublin (Online)},
+  note         = {University College Dublin, IE (Online)},
   preview      = {SF.gif}
 }
 
@@ -298,7 +298,7 @@
   additional_info={[LISA Symposium XIII](https://lisasymposium13.lisamission.org/)},
   year         = {2021},
   month        = {10},
-  note         = {University College Dublin (Online)},
+  note         = {Online},
   preview      = {SF.gif}
 }
 
@@ -308,7 +308,7 @@
   additional_info={[23rd Capra Meeting on Radiation Reaction in General Relativity](https://zippy.ph.utexas.edu/relativity/capra23/)},
   year         = {2020},
   month        = {6},
-  note         = {University of Texas at Austin (Online)},
+  note         = {University of Texas at Austin, US (Online)},
   preview      = {SF.gif}
 }
 
@@ -318,6 +318,6 @@
   additional_info={[3rd meeting of the GWVerse COST action](https://indico.sissa.it/event/37/)},
   year         = {2020},
   month        = {1},
-  note         = {Institute for Fundamental Physics of the Universe, Trieste},
+  note         = {Institute for Fundamental Physics of the Universe, Trieste, IT},
   preview      = {SF.gif}
 }
