Added arXiv buttons to publications

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -6,7 +6,7 @@
   archiveprefix = {arXiv},
 	author = {Long, Oliver and Whittall, Christopher and Barack, Leor},
 	doi = {10.1103/PhysRevD.110.044039},
-	eprint = {2406.08363},
+	arxiv = {2406.08363},
 	journal = {Physical Review D},
 	keywords = {feature},
 	number = {4},
@@ -28,7 +28,7 @@
 	collaboration = {LISA Consortium Waveform Working Group},
 	date-added = {2023-12-27 12:43:39 +0000},
 	date-modified = {2023-12-27 12:43:58 +0000},
-	eprint = {2311.01300},
+	arxiv = {2311.01300},
 	month = {11},
 	primaryclass = {gr-qc},
 	title = {{Waveform Modelling for the Laser Interferometer Space Antenna}},
@@ -45,7 +45,7 @@
 	date-added = {2023-12-27 12:43:46 +0000},
 	date-modified = {2023-12-27 12:43:46 +0000},
 	doi = {10.1103/PhysRevD.108.084015},
-	eprint = {2307.03435},
+	arxiv = {2307.03435},
 	journal = {Physical Review D},
 	number = {8},
 	pages = {084015},
@@ -66,7 +66,7 @@
 	date-added = {2023-12-27 12:44:24 +0000},
 	date-modified = {2023-12-27 12:46:22 +0000},
 	doi = {10.1103/PhysRevD.108.024025},
-	eprint = {2304.09200},
+	arxiv = {2304.09200},
 	journal = {Physical Review D},
 	keywords = {feature},
 	number = {2},
@@ -88,7 +88,7 @@
 	author = {Lidia J. Gomes Da Silva and Rodrigo Panosso Macedo and Jonathan E. Thompson and Juan A. Valiente Kroon and Leanne Durkan and Oliver Long},
 	date-added = {2023-12-27 12:44:19 +0000},
 	date-modified = {2023-12-27 14:41:35 +0000},
-	eprint = {2306.13153},
+	arxiv = {2306.13153},
 	month = {6},
 	primaryclass = {gr-qc},
 	title = {{Hyperboloidal discontinuous time-symmetric numerical algorithm with higher order jumps for gravitational self-force computations in the time domain}},
@@ -106,7 +106,7 @@
 	date-added = {2023-12-27 12:44:32 +0000},
 	date-modified = {2023-12-27 12:46:08 +0000},
 	doi = {10.1103/PhysRevD.106.104031},
-	eprint = {2209.03740},
+	arxiv = {2209.03740},
 	journal = {Physical Review D},
 	number = {10},
 	pages = {104031},
@@ -127,7 +127,7 @@
 	date-added = {2023-12-27 12:44:37 +0000},
 	date-modified = {2023-12-27 15:08:56 +0000},
 	doi = {10.1103/PhysRevD.104.024014},
-	eprint = {2105.05630},
+	arxiv = {2105.05630},
 	journal = {Physical Review D},
 	number = {2},
 	pages = {024014},
@@ -148,8 +148,9 @@
   author = {Oliver Long},
   publisher = {University of Southampton},
   year = {2022},
-  url = {https://eprints.soton.ac.uk/457451/},
+  url = {https://arxivs.soton.ac.uk/457451/},
   inspirehep_id = {2149027},
+  arxiv = {2209.03836},
   preview={SF.gif}}
 
 @misc{LISAWav,
