Add Paris seminar

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -153,6 +153,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{IHESIPhT,
+  abbr		   = {Invited Seminar},
+  title        = {Black hole scattering in the strong-field regime: Merging post-Minkowskian theory with numerical methods},
+  additional_info={[Séminaire Amplitudes et Gravitation sur l'Yvette](https://indico.math.cnrs.fr/event/13106/)},
+  year         = {2024},
+  month        = {10},
+  note         = {Institut des Hautes Études Scientifiques, Paris, FR},
+  preview      = {SFNRPMAmp.gif}
+}
+
 @misc{LISAWav,
   abbr		   = {Invited Talk},
   title        = {Modelling of unbound binary black hole encounters},
