Change gif of Edinburgh

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -200,7 +200,7 @@
   year         = {2024},
   month        = {3},
   note         = {The Higgs Centre for Theoretical Physics, Edinburgh, UK},
-  preview      = {SF.gif}
+  preview      = {SFNR.gif}
 }
 
 @misc{GSFAmpBrazil,
