Add Soton Seminar title to CV and update gif of IHES/IPhT seminar

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -160,7 +160,7 @@
   year         = {2024},
   month        = {10},
   note         = {Institut des Hautes Études Scientifiques, Paris, FR},
-  preview      = {SFNRPMAmp.gif}
+  preview      = {SFNR.gif}
 }
 
 @misc{LISAWav,
