Added Soton seminar

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -153,6 +153,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{SotonSeminar,
+  abbr		   = {Invited Seminar},
+  title        = {Black hole scattering in the strong-field regime: Merging post-Minkowskian theory with numerical methods},
+  additional_info={[Southampton Gravity Seminar](https://www.southampton.ac.uk/stag/news/seminars/2024/11/7-gravity.page)},
+  year         = {2024},
+  month        = {11},
+  note         = {University of Southampton, UK},
+  preview      = {SFNR.gif}
+}
+
 @misc{IHESIPhT,
   abbr		   = {Invited Seminar},
   title        = {Black hole scattering in the strong-field regime: Merging post-Minkowskian theory with numerical methods},
