Add Humboldt seminar

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -153,6 +153,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{HumboldtSeminar,
+  abbr		   = {Invited Seminar},
+  title        = {Black hole scattering in the strong-field regime: Merging post-Minkowskian theory with numerical methods},
+  additional_info={[Humboldt WQFT Seminar](https://qft.physik.hu-berlin.de/next-seminars/oliver-long/)},
+  year         = {2024},
+  month        = {11},
+  note         = {Humboldt University of Berlin, DE},
+  preview      = {SFNR.gif}
+}
+
 @misc{SotonSeminar,
   abbr		   = {Invited Seminar},
   title        = {Black hole scattering in the strong-field regime: Merging post-Minkowskian theory with numerical methods},
