Add NR community call

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -153,6 +153,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{NRCommunity,
+  abbr		   = {Contributed Talk},
+  title        = {Hyperbolic Binary Black Hole encounters with the Spectral Einstein Code},
+  additional_info={[NR Community Call](https://github.com/sxs-collaboration/nr-community-call/wiki)},
+  year         = {2024},
+  month        = {12},
+  note         = {Online},
+  preview      = {NR.gif}
+}
+
 @misc{HumboldtSeminar,
   abbr		   = {Invited Seminar},
   title        = {Black hole scattering in the strong-field regime: Merging post-Minkowskian theory with numerical methods},
