Modified paper info

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -96,7 +96,7 @@
   year = {2023},
   month = {6},
   preview={penrose.png},
-  additional_info={Accepted for publication in <i>Physical Review D</i>}
+  additional_info={}
   }
 
 @article{Barack:2022pde,
