--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{Abac:2025saz,
+  abbr={arXiv},
+  author = {Einstein Telescope (ET) Collaboration},
+  title = {{The Science of the Einstein Telescope}},
+  arxiv = {2503.12263},
+  archivePrefix = {arXiv},
+  primaryClass = {gr-qc},
+  month = {3},
+  year = {2025},
+  inspirehep_id = {2901213},
+  preview={ET.png},
+  note = {Image courtesy of ET Collaboration},
+}
+
 @article{Long:2024ltn,
   abbr={PRD},
   archiveprefix = {arXiv},
