Add SXS Catalog paper

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{Scheel:2025jct,
+    abbr={arXiv},
+    author = "{Simulating eXtreme Spacetimes (SXS) Collaboration}",
+    title = "{The SXS Collaboration's third catalog of binary black hole simulations}",
+    arxiv = "2505.13378",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "5",
+    year = "2025",
+    inspirehep_id = {2922900},
+    preview={NR.gif},
+}
+
 @article{Abac:2025saz,
   abbr={arXiv},
   author = {Einstein Telescope (ET) Collaboration},
