--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{Long:2025nmj,
+    abbr={arXiv},
+    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
+    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
+    arxiv = "2507.08071",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "7",
+    year = "2025",
+    inspirehep_id = {2944862},
+    preview={NR.gif},
+    keywords = {feature},
+}
+
 @article{Scheel:2025jct,
     abbr={arXiv},
     author = "{Simulating eXtreme Spacetimes (SXS) Collaboration}",
@@ -95,7 +109,6 @@
 	doi = {10.1103/PhysRevD.108.024025},
 	arxiv = {2304.09200},
 	journal = {Physical Review D},
-	keywords = {feature},
 	number = {2},
 	pages = {024025},
 	primaryclass = {hep-th},
