--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -193,6 +193,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{GR24Amaldi16,
+  abbr		   = {Contributed Talk},
+  title        = {Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models},
+  additional_info={[GR24 & Amaldi16](https://iop.eventsair.com/gr24-amaldi16/)},
+  year         = {2025},
+  month        = {07},
+  note         = {Glasgow, UK},
+  preview      = {NR.gif}
+}
+
 @misc{NRCommunity,
   abbr		   = {Contributed Talk},
   title        = {Hyperbolic Binary Black Hole encounters with the Spectral Einstein Code},
