Add NRHypPaper to selected papers

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -13,6 +13,7 @@
     inspirehep_id = {2944862},
     preview={NR.gif},
     keywords = {feature},
+    selected = {true},
 }
 
 @article{Scheel:2025jct,
