--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -194,6 +194,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{FNR25,
+  abbr		   = {Contributed Talk},
+  title        = {Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models},
+  additional_info={[New Frontiers of Numerical Relativity 2025](https://grg.uib.es/newfrontiersNR25/)},
+  year         = {2025},
+  month        = {07},
+  note         = {Universitat de les Illes Balears, ES},
+  preview      = {NR.gif}
+}
+
 @misc{GR24Amaldi16,
   abbr		   = {Contributed Talk},
   title        = {Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models},
