Add Singapore 25 talk

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -194,6 +194,16 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+
+@misc{FNR25,
+  abbr		   = {Invited Talk},
+  title        = {Putting the hype in hyperbolic black hole scattering},
+  additional_info={[Mathematical Methods for the General Relativistic Two-body Problem](https://ims.nus.edu.sg/events/generalrelativistictwobodyproblem/)},
+  year         = {2025},
+  month        = {08},
+  note         = {University of Singapore, SG},
+  preview      = {SFNR.gif}
+}
 @misc{FNR25,
   abbr		   = {Contributed Talk},
   title        = {Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models},
