Add EOB@Work25 talk

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -194,6 +194,15 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
+@misc{FNR25,
+  abbr		   = {Invited Talk},
+  title        = {Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models},
+  additional_info={[EOB@Work25](https://agenda.infn.it/event/47987/)},
+  year         = {2025},
+  month        = {09},
+  note         = {Istituto Nazionale di Fisica Nucleare, IT},
+  preview      = {NR.gif}
+}
 
 @misc{Singapore25,
   abbr		   = {Invited Talk},
