Add Iago paper and SF Amp talk

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{Mendes:2025gov,
+    abbr={arXiv},
+    author = "Mendes, Iago B. and Vu, Nils L. and Long, Oliver and Pfeiffer, Harald P. and Owen, Robert",
+    title = "{Parameter control for binary black hole initial data}",
+    arxiv = "2509.07291",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "9",
+    year = "2025",
+    inspirehep_id = {2968087},
+    preview={NR.gif},
+}
+
 @article{Long:2025nmj,
     abbr={arXiv},
     author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
@@ -194,7 +207,17 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
-@misc{FNR25,
+@misc{EOBatWork25,
+  abbr		   = {Invited Talk},
+  title        = {Applications of numerical self-force scattering simulations},
+  additional_info={[2nd Annual Workshop on Self-Force and Amplitudes](https://indico.global/event/4539/overview)},
+  year         = {2025},
+  month        = {09},
+  note         = {University of Southampton, UK},
+  preview      = {SFAmp.gif}
+}
+
+@misc{EOBatWork25,
   abbr		   = {Invited Talk},
   title        = {Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models},
   additional_info={[EOB@Work25](https://agenda.infn.it/event/47987/)},
