Add SXS catalog acceptance

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -30,7 +30,7 @@
 }
 
 @article{Scheel:2025jct,
-    abbr={arXiv},
+    abbr={CQG},
     author = "{Simulating eXtreme Spacetimes (SXS) Collaboration}",
     title = "{The SXS Collaboration's third catalog of binary black hole simulations}",
     arxiv = "2505.13378",
@@ -40,6 +40,7 @@
     year = "2025",
     inspirehep_id = {2922900},
     preview={NR.gif},
+    note = {Accepted for publication in Classical and Quantum Gravity},
 }
 
 @article{Abac:2025saz,
