Add Chris' paper

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,19 @@
 ---
 ---
 
+@article{Whittall:2025dqn,
+    abbr={arXiv},
+    author = "Whittall, Christopher and Barack, Leor and Long, Oliver",
+    title = "{Frequency-domain self-force calculations using Gegenbauer reconstruction}",
+    arxiv = "2509.19439",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "9",
+    year = "2025",
+    inspirehep_id = {2973102},
+    preview={SF.gif},
+}
+
 @article{Mendes:2025gov,
     abbr={arXiv},
     author = "Mendes, Iago B. and Vu, Nils L. and Long, Oliver and Pfeiffer, Harald P. and Owen, Robert",
