Update Catalog to published

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@article{Scheel:2025jct,
+    abbr={CQG},
+    author = "{Simulating eXtreme Spacetimes (SXS) Collaboration}",
+    title = "{The SXS Collaboration's third catalog of binary black hole simulations}",
+    arxiv = "2505.13378",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1088/1361-6382/adfd34",
+    journal = "Classical and Quantum Gravity",
+    volume = "42",
+    number = "19",
+    pages = "195017",
+    year = "2025",
+    month = "10",
+    inspirehep_id = {2922900},
+    preview={NR.gif},
+}
+
 @article{Whittall:2025dqn,
     abbr={arXiv},
     author = "Whittall, Christopher and Barack, Leor and Long, Oliver",
@@ -40,20 +58,6 @@
     preview={NR.gif},
     keywords = {feature},
     selected = {true},
-}
-
-@article{Scheel:2025jct,
-    abbr={CQG},
-    author = "{Simulating eXtreme Spacetimes (SXS) Collaboration}",
-    title = "{The SXS Collaboration's third catalog of binary black hole simulations}",
-    arxiv = "2505.13378",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    month = "5",
-    year = "2025",
-    inspirehep_id = {2922900},
-    preview={NR.gif},
-    note = {Accepted for publication in Classical and Quantum Gravity},
 }
 
 @article{Abac:2025saz,
