--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+@article{Long:2025nmj,
+    abbr={PRD},
+    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
+    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
+    arxiv = "2507.08071",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "10",
+    year = "2025",
+    inspirehep_id = {2944862},
+    preview={NR.gif},
+    keywords = {feature},
+    selected = {true},
+    journal = {Accepted for publication in Physical Review D},
+}
+
 @article{Scheel:2025jct,
     abbr={CQG},
     author = "{Simulating eXtreme Spacetimes (SXS) Collaboration}",
@@ -43,21 +59,6 @@
     year = "2025",
     inspirehep_id = {2968087},
     preview={NR.gif},
-}
-
-@article{Long:2025nmj,
-    abbr={arXiv},
-    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
-    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
-    arxiv = "2507.08071",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    month = "7",
-    year = "2025",
-    inspirehep_id = {2944862},
-    preview={NR.gif},
-    keywords = {feature},
-    selected = {true},
 }
 
 @article{Abac:2025saz,
@@ -152,7 +153,9 @@
   preview={SFPMAmp.gif},
   selected={true},
   annotation={Lead author, alphabetical},
-	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.108.024025}}
+	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.108.024025},
+  note = {<b>Lead author</b> (follows HEP convention of alphabetical author list)}
+  }
 
 @article{DaSilva:2023xif,
   abbr={arXiv},
