Add published LISAWavWG paper

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,21 +1,26 @@
 ---
 ---
 
-@article{Long:2025nmj,
-    abbr={PRD},
-    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
-    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
-    arxiv = "2507.08071",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    month = "10",
-    year = "2025",
-    inspirehep_id = {2944862},
-    preview={NR.gif},
-    keywords = {feature},
-    selected = {true},
-    journal = {Accepted for publication in Physical Review D},
-}
+@article{LISA:2023arg,
+  abbr={Living Rev. Rel.},
+	archiveprefix = {arXiv},
+	author = {LISA Consortium Waveform Working Group},
+	collaboration = {LISA Consortium Waveform Working Group},
+	date-added = {2023-12-27 12:43:39 +0000},
+	date-modified = {2023-12-27 12:43:58 +0000},
+	arxiv = {2311.01300},
+	primaryclass = {gr-qc},
+  doi = "10.1007/s41114-025-00056-1",
+  journal = "Living Reviews in Relativity",
+  volume = "28",
+  number = "1",
+  pages = "9",
+  year = "2025",
+	month = "10",
+	title = {{Waveform Modelling for the Laser Interferometer Space Antenna}},
+  inspirehep_id = {2717996},
+  preview={lisa.jpg},
+  note = {Image courtesy of the European Space Agency (ESA)}}
 
 @article{Scheel:2025jct,
     abbr={CQG},
@@ -61,6 +66,22 @@
     preview={NR.gif},
 }
 
+@article{Long:2025nmj,
+    abbr={PRD},
+    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
+    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
+    arxiv = "2507.08071",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    month = "07",
+    year = "2025",
+    inspirehep_id = {2944862},
+    preview={NR.gif},
+    keywords = {feature},
+    selected = {true},
+    journal = {Accepted for publication in Physical Review D},
+}
+
 @article{Abac:2025saz,
   abbr={arXiv},
   author = {Einstein Telescope (ET) Collaboration},
@@ -72,7 +93,7 @@
   year = {2025},
   inspirehep_id = {2901213},
   preview={ET.png},
-  note = {Image courtesy of ET Collaboration},
+  note = {Image courtesy of the ET Collaboration},
 }
 
 @article{Long:2024ltn,
@@ -94,23 +115,6 @@
   preview={SFAmp.gif},
   selected={true},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.110.044039}}
-
-@article{LISA:2023arg,
-  abbr={arXiv},
-	archiveprefix = {arXiv},
-	author = {LISA Consortium Waveform Working Group},
-	collaboration = {LISA Consortium Waveform Working Group},
-	date-added = {2023-12-27 12:43:39 +0000},
-	date-modified = {2023-12-27 12:43:58 +0000},
-	arxiv = {2311.01300},
-	month = {11},
-	primaryclass = {gr-qc},
-	title = {{Waveform Modelling for the Laser Interferometer Space Antenna}},
-  inspirehep_id = {2717996},
-  preview={lisa.jpg},
-  note = {Image courtesy of European Space Agency (ESA)},
-	year = {2023},
-  month = {11}}
 
 @article{Boschini:2023ryi,
   abbr={PRD},
