Add NR SF PM paper

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,20 @@
 ---
 ---
 
+@article{Long:2025tvk,
+  abbr={arXiv},
+  author = "Oliver Long and Pfeiffer, Harald P. and Kidder, Lawrence E. and Scheel, Mark A.",
+  title = "{Black-hole scattering with numerical relativity: Self-force extraction and post-Minkowskian validation}",
+  eprint = "2511.10196",
+  archivePrefix = "arXiv",
+  month = "11",
+  year = "2025",
+  inspirehep_id = {3082753},
+	keywords = {feature},
+  selected = {true},
+  preview={NR.gif}
+}
+
 @article{LISA:2023arg,
   abbr={Living Rev. Rel.},
 	archiveprefix = {arXiv},
@@ -156,7 +170,7 @@
   inspirehep_id = {2652649},
   preview={SFPMAmp.gif},
   selected={true},
-  annotation={Lead author, alphabetical},
+  annotation={Co-lead author, alphabetical},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.108.024025},
   note = {<b>Lead author</b> (follows HEP convention of alphabetical author list)}
   }
