Add Iago and Chris PRD

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -55,7 +55,7 @@
 }
 
 @article{Whittall:2025dqn,
-    abbr={arXiv},
+    abbr={PRD},
     author = "Whittall, Christopher and Barack, Leor and Long, Oliver",
     title = "{Frequency-domain self-force calculations using Gegenbauer reconstruction}",
     arxiv = "2509.19439",
@@ -65,10 +65,11 @@
     year = "2025",
     inspirehep_id = {2973102},
     preview={SF.gif},
+    journal = {Accepted for publication in Physical Review D},
 }
 
 @article{Mendes:2025gov,
-    abbr={arXiv},
+    abbr={PRD},
     author = "Mendes, Iago B. and Vu, Nils L. and Long, Oliver and Pfeiffer, Harald P. and Owen, Robert",
     title = "{Parameter control for binary black hole initial data}",
     arxiv = "2509.07291",
@@ -78,6 +79,7 @@
     year = "2025",
     inspirehep_id = {2968087},
     preview={NR.gif},
+    journal = {Accepted for publication in Physical Review D},
 }
 
 @article{Long:2025nmj,
