--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -2,7 +2,7 @@
 ---
 
 @article{Long:2025tvk,
-  abbr={arXiv},
+  abbr={PRD},
   author = "Oliver Long and Pfeiffer, Harald P. and Kidder, Lawrence E. and Scheel, Mark A.",
   title = "{Black-hole scattering with numerical relativity: Self-force extraction and post-Minkowskian validation}",
   eprint = "2511.10196",
@@ -12,7 +12,8 @@
   inspirehep_id = {3082753},
 	keywords = {feature},
   selected = {true},
-  preview={NR.gif}
+  preview={NR.gif},
+  journal = {Accepted for publication in Physical Review D},
 }
 
 @article{LISA:2023arg,
