--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -5,7 +5,7 @@
   abbr={PRD},
   author = "Oliver Long and Pfeiffer, Harald P. and Kidder, Lawrence E. and Scheel, Mark A.",
   title = "{Black-hole scattering with numerical relativity: Self-force extraction and post-Minkowskian validation}",
-  eprint = "2511.10196",
+  arxiv = "2511.10196",
   archivePrefix = "arXiv",
   month = "11",
   year = "2025",
