--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -7,13 +7,72 @@
   title = "{Black-hole scattering with numerical relativity: Self-force extraction and post-Minkowskian validation}",
   arxiv = "2511.10196",
   archivePrefix = "arXiv",
-  month = "11",
+  journal = "Physical Review D",
+  volume = "112",
+  number = "12",
+  pages = "124038",
   year = "2025",
+  month = "12",
   inspirehep_id = {3082753},
 	keywords = {feature},
   selected = {true},
   preview={NR.gif},
-  journal = {Accepted for publication in Physical Review D},
+}
+
+@article{Whittall:2025dqn,
+    abbr={PRD},
+    author = "Whittall, Christopher and Barack, Leor and Long, Oliver",
+    title = "{Frequency-domain self-force calculations using Gegenbauer reconstruction}",
+    arxiv = "2509.19439",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/9qsl-pr63",
+    journal = "Physical Review D",
+    volume = "112",
+    number = "12",
+    pages = "124045",
+    year = "2025",
+    month = "12",
+    inspirehep_id = {2973102},
+    preview={SF.gif},
+}
+
+@article{Mendes:2025gov,
+    abbr={PRD},
+    author = "Mendes, Iago B. and Vu, Nils L. and Long, Oliver and Pfeiffer, Harald P. and Owen, Robert",
+    title = "{Parameter control for binary black hole initial data}",
+    arxiv = "2509.07291",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/zh31-bbtm",
+    journal = "Physical Review D",
+    volume = "112",
+    number = "12",
+    pages = "124049",
+    year = "2025",
+    month = "12",
+    inspirehep_id = {2968087},
+    preview={NR.gif},
+}
+
+@article{Long:2025nmj,
+    abbr={PRD},
+    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
+    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
+    arxiv = "2507.08071",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/p6fx-7798",
+    journal = "Physical Review D",
+    volume = "112",
+    number = "12",
+    pages = "124039",
+    year = "2025",
+    month = "12",
+    inspirehep_id = {2944862},
+    preview={NR.gif},
+    keywords = {feature},
+    selected = {true},
 }
 
 @article{LISA:2023arg,
@@ -53,50 +112,6 @@
     month = "10",
     inspirehep_id = {2922900},
     preview={NR.gif},
-}
-
-@article{Whittall:2025dqn,
-    abbr={PRD},
-    author = "Whittall, Christopher and Barack, Leor and Long, Oliver",
-    title = "{Frequency-domain self-force calculations using Gegenbauer reconstruction}",
-    arxiv = "2509.19439",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    month = "9",
-    year = "2025",
-    inspirehep_id = {2973102},
-    preview={SF.gif},
-    journal = {Accepted for publication in Physical Review D},
-}
-
-@article{Mendes:2025gov,
-    abbr={PRD},
-    author = "Mendes, Iago B. and Vu, Nils L. and Long, Oliver and Pfeiffer, Harald P. and Owen, Robert",
-    title = "{Parameter control for binary black hole initial data}",
-    arxiv = "2509.07291",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    month = "9",
-    year = "2025",
-    inspirehep_id = {2968087},
-    preview={NR.gif},
-    journal = {Accepted for publication in Physical Review D},
-}
-
-@article{Long:2025nmj,
-    abbr={PRD},
-    author = {Long, Oliver and Pfeiffer, Harald P. and Buonanno, Alessandra and Jakobsen, Gustav Uhre and Mogull, Gustav and Ramos-Buades, Antoni and R{\"u}ter, Hannes R. and Kidder, Lawrence E. and Scheel, Mark A.},
-    title = "{Highly accurate simulations of asymmetric black-hole scattering and cross validation of effective-one-body models}",
-    arxiv = "2507.08071",
-    archivePrefix = "arXiv",
-    primaryClass = "gr-qc",
-    month = "07",
-    year = "2025",
-    inspirehep_id = {2944862},
-    preview={NR.gif},
-    keywords = {feature},
-    selected = {true},
-    journal = {Accepted for publication in Physical Review D},
 }
 
 @article{Abac:2025saz,
@@ -175,7 +190,7 @@
   selected={true},
   annotation={Co-lead author, alphabetical},
 	bdsk-url-1 = {https://doi.org/10.1103/PhysRevD.108.024025},
-  note = {<b>Lead author</b> (follows HEP convention of alphabetical author list)}
+  note = {<b>Co-lead author</b> (follows HEP convention of alphabetical author list)}
   }
 
 @article{DaSilva:2023xif,
