Add Hyperboloidal Vienna talk

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -264,7 +264,27 @@
   arxiv = {2209.03836},
   preview={SF.gif}}
 
-@misc{EOBatWork25,
+@misc{Hyperboloidal26,
+  abbr		   = {Invited Talk},
+  title        = {Hyping up self-force scattering: Methods and applications in the pre-hyperboloidal era},
+  additional_info={[Hyperboloidal Foliations and their Application](https://www.esi.ac.at/events/e591/)},
+  year         = {2026},
+  month        = {01},
+  note         = {Erwin Schrödinger Institute, AT},
+  preview      = {SF.gif}
+}
+
+@misc{GWSky25,
+  abbr		   = {Invited Talk},
+  title        = {NR, PM, PN, GSF comparisons and transferring information from one method to another},
+  additional_info={[GWSky kick-off meeting](https://workshops.aei.mpg.de/gwsky-kick-off-meeting/)},
+  year         = {2025},
+  month        = {12},
+  note         = {Max Planck Institute for Gravitational Physics, DE <br> Joint with Raj Patil},
+  preview      = {GWSky.png}
+}
+
+@misc{SFAmp25,
   abbr		   = {Invited Talk},
   title        = {Applications of numerical self-force scattering simulations},
   additional_info={[2nd Annual Workshop on Self-Force and Amplitudes](https://indico.global/event/4539/overview)},
