Add scattering radiated energy resummation paper

--- a/_bibliography/bib.bib
+++ b/_bibliography/bib.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+@article{Barack:2026izc,
+    abbr={arXiv},
+    author = "Barack, Leor and Gonzo, Riccardo and Leather, Benjamin and Long, Oliver and Warburton, Niels",
+    title = "{Resummed energy loss in extreme-mass-ratio scattering using critical orbits}",
+    arxiv = "2602.10089",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "QMUL-PH-25-22",
+    month = "2",
+    year = "2026",
+	  inspirehep_id = {3118169},
+    keywords = {feature},
+    selected = {true},
+    preview={SFAmp.gif},
+}
+
 @article{Long:2025tvk,
   abbr={PRD},
   author = "Oliver Long and Pfeiffer, Harald P. and Kidder, Lawrence E. and Scheel, Mark A.",
